--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next-cloudinary": "^5.20.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^5.0.1",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
