--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,5 @@
 # When adding additional environment variables, the schema in "/src/env.js"
 # should be updated accordingly.
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME: "bar"
-RESEND_API_KEY: "foo"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="bar"
+RESEND_API_KEY="foo"
