--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.1.7",
+    "jiti": "^1.21.0",
     "lucide-react": "^0.341.0",
     "next": "^14.2.3",
     "next-cloudinary": "^6.5.1",
