--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel-react": "^8.1.1",
     "framer-motion": "^11.1.7",
     "jiti": "^1.21.0",
     "lucide-react": "^0.341.0",
