--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@next/third-parties": "^15.0.3",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
@@ -23,7 +24,7 @@
     "framer-motion": "^11.11.1",
     "jiti": "^1.21.6",
     "lucide-react": "^0.341.0",
-    "next": "^14.2.14",
+    "next": "^15.0.3",
     "next-cloudinary": "^6.14.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
