--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next-cloudinary": "^6.16.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-google-reviews": "^1.7.4",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "resend": "^3.5.0",
