add review env var

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
-RESEND_API_KEY=""
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=""
+RESEND_API_KEY="example"
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="strootmann"
+NEXT_PUBLIC_GOOGLE_FEATURABLE_WIDGET="4a7ab06d-759a-49dd-bf79-f9eac6fc982d"
