--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@next/third-parties": "^15.5.3",
+    "@next/third-parties": "16.0.7",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
@@ -24,10 +24,10 @@
     "framer-motion": "^11.18.2",
     "jiti": "^1.21.7",
     "lucide-react": "^0.341.0",
-    "next": "^15.5.3",
+    "next": "16.0.7",
     "next-cloudinary": "^6.16.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "19.2.1",
+    "react-dom": "19.2.1",
     "react-google-reviews": "^1.7.4",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
@@ -39,13 +39,13 @@
   "devDependencies": {
     "@types/eslint": "^8.56.12",
     "@types/node": "^20.19.14",
-    "@types/react": "^18.3.24",
-    "@types/react-dom": "^18.3.7",
+    "@types/react": "19.2.7",
+    "@types/react-dom": "19.2.3",
     "@typescript-eslint/eslint-plugin": "^7.18.0",
     "@typescript-eslint/parser": "^7.18.0",
     "embla-carousel": "^8.6.0",
     "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.32",
+    "eslint-config-next": "16.0.7",
     "postcss": "^8.5.6",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.5.14",
@@ -55,5 +55,11 @@
   "ct3aMetadata": {
     "initVersion": "7.27.0"
   },
-  "packageManager": "pnpm@9.0.4"
+  "packageManager": "pnpm@9.0.4",
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.7",
+      "@types/react-dom": "19.2.3"
+    }
+  }
 }
