migrate to bun and do major updates

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,2 @@
-RESEND_API_KEY="example"
+RESEND_API_KEY="blabla"
 NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME="strootmann"
-NEXT_PUBLIC_GOOGLE_FEATURABLE_WIDGET="4a7ab06d-759a-49dd-bf79-f9eac6fc982d"
