--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "dev": "bun --bun next dev",
     "build": "bun --bun next build",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "start": "bun --bun next start"
   },
   "dependencies": {
@@ -49,7 +51,6 @@
     "eslint": "^9.39.2",
     "eslint-config-next": "16.1.1",
     "prettier": "^3.7.4",
-    "prettier-plugin-tailwindcss": "^0.7.2",
     "typescript": "^5.9.3"
   },
   "ct3aMetadata": {
